--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
     "alwaysStrict": true,
     "declaration": true,
     "module": "commonjs",
-    "outDir": "lib/",
+    "outDir": "build/",
     "sourceMap": true,
     "rootDir": "src/",
     "target": "es2017",
