--- a/package.json
+++ b/package.json
@@ -21,13 +21,22 @@
     "@typescript-eslint/parser": "^1.11.0",
     "ava": "^2.1.0",
     "codecov": "^3.5.0",
-    "eslint": "^5.",
+    "eslint": "^5.16.0",
     "eslint-config-xo": "^0.26.0",
     "eslint-config-xo-typescript": "^0.15.0",
     "nyc": "^14.1.1",
     "ts-node": "^8.3.0",
     "typescript": "^3.5.2",
     "xo": "^0.24.0"
+  },
+  "ava": {
+    "compileEnhancements": false,
+    "extensions": [
+      "ts"
+    ],
+    "require": [
+      "ts-node/register"
+    ]
   },
   "xo": {
     "extends": "xo-typescript",
