--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,10 +11,20 @@ before_script:
   - yarn
 
 test:
+  stage: test
+  script:
+    - yarn test
+  artifacts:
+    paths:
+      - coverage/lcov.info
+
+codecov:
+  stage: deploy
   environment:
     name: codecov
   only:
-    - master
+    - master@bauke/fancify
   script:
-    - yarn test
-    - npx codecov
+    - yarn codecov
+  dependencies:
+    - test
