--- a/package.json
+++ b/package.json
@@ -1,18 +1,19 @@
 {
   "name": "fancify",
+  "description": "Convert letters and numbers to fancy Unicode ones.",
   "version": "1.2.1",
   "author": "Bauke <me@bauke.xyz>",
   "repository": "https://gitlab.com/Bauke/fancify",
   "license": "MIT",
-  "main": "build/main.js",
-  "types": "build/main.d.ts",
+  "main": "build/src/main.js",
+  "types": "build/src/main.d.ts",
   "files": [
-    "build/",
-    "characters.json"
+    "build/src/"
   ],
   "scripts": {
     "build": "tsc",
-    "test": "yarn build && xo && nyc ava"
+    "clean": "trash build/ .nyc_output/ coverage/",
+    "test": "yarn clean && yarn build && xo && nyc ava"
   },
   "dependencies": {},
   "devDependencies": {
@@ -25,6 +26,7 @@
     "eslint-config-xo": "^0.26.0",
     "eslint-config-xo-typescript": "^0.15.0",
     "nyc": "^14.1.1",
+    "trash-cli": "^3.0.0",
     "ts-node": "^8.3.0",
     "typescript": "^3.5.2",
     "xo": "^0.24.0"
@@ -33,6 +35,9 @@
     "compileEnhancements": false,
     "extensions": [
       "ts"
+    ],
+    "files": [
+      "test/**"
     ],
     "require": [
       "ts-node/register"
