--- a/package.json
+++ b/package.json
@@ -1,65 +1,49 @@
 {
   "name": "fancify",
   "description": "Convert letters and numbers to fancy Unicode ones.",
-  "version": "1.2.3",
+  "version": "1.2.4",
   "author": "Bauke <me@bauke.xyz>",
   "repository": "https://gitlab.com/Bauke/fancify",
   "license": "MIT",
-  "main": "build/src/main.js",
-  "types": "build/src/main.d.ts",
+  "main": "build/source/main.js",
+  "types": "build/source/main.d.ts",
   "files": [
-    "build/src/"
+    "build/source/"
   ],
   "scripts": {
     "build": "tsc",
-    "clean": "trash build/ .nyc_output/ coverage/",
-    "test": "yarn clean && yarn build && xo && nyc ava"
+    "test": "xo && nyc ava"
   },
   "dependencies": {},
   "devDependencies": {
     "@types/node": "^12.12.14",
-    "@typescript-eslint/eslint-plugin": "^2.9.0",
-    "@typescript-eslint/parser": "^2.9.0",
-    "ava": "^2.4.0",
-    "codecov": "^3.6.1",
-    "eslint": "^6.7.2",
-    "eslint-config-xo": "^0.27.2",
-    "eslint-config-xo-typescript": "^0.23.0",
-    "nyc": "^14.1.1",
+    "ava": "^3.5.0",
+    "codecov": "^3.6.5",
+    "nyc": "^15.0.0",
     "trash-cli": "^3.0.0",
-    "ts-node": "^8.5.4",
-    "typescript": "^3.7.2",
-    "xo": "^0.25.3"
+    "ts-node": "^8.6.2",
+    "typescript": "^3.8.3",
+    "xo": "^0.27.2"
   },
   "ava": {
-    "compileEnhancements": false,
     "extensions": [
       "ts"
     ],
     "files": [
-      "test/**"
+      "test/*.test.ts"
     ],
     "require": [
       "ts-node/register"
     ]
   },
   "xo": {
-    "extends": "xo-typescript",
-    "extensions": [
-      "ts"
-    ],
     "ignores": [
       "build/**"
     ],
+    "prettier": true,
     "rules": {
-      "@typescript-eslint/indent": [
-        "error",
-        2,
-        {
-          "SwitchCase": 1
-        }
-      ],
       "capitalized-comments": "off"
-    }
+    },
+    "space": true
   }
 }
