--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,14 @@
 {
   "compilerOptions": {
-    "alwaysStrict": true,
     "declaration": true,
     "module": "commonjs",
     "outDir": "build/",
     "sourceMap": true,
+    "strict": true,
     "target": "es2017"
   },
   "include": [
-    "src/*.ts",
+    "source/*.ts",
     "test/*.ts"
   ],
   "exclude": [
