--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
   ],
   "scripts": {
     "build": "tsc",
-    "test": "xo && ava --verbose",
-    "prepublishOnly": "rm -rf build/ && yarn build && yarn test"
+    "test": "xo && c8 ava",
+    "prepublishOnly": "rm -rf build/ && pnpm build && pnpm test"
   },
   "devDependencies": {
     "ava": "^4.1.0",
+    "c8": "^7.11.0",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.3",
     "xo": "^0.48.0"
@@ -32,6 +33,19 @@
     "nodeArguments": [
       "--no-warnings",
       "--loader=ts-node/esm"
+    ]
+  },
+  "c8": {
+    "100": true,
+    "all": true,
+    "include": [
+      "source",
+      "tests"
+    ],
+    "reportDir": "coverage",
+    "reporter": [
+      "text",
+      "html"
     ]
   },
   "xo": {
