--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
   "main": "build/source/index.js",
   "types": "build/source/index.d.ts",
   "files": [
-    "build/source/"
+    "build/source/",
+    "package.json",
+    "LICENSE",
+    "README.md"
   ],
   "scripts": {
     "build": "tsc",
